# SemanticShield

./: .gitignore  CONTRIBUTING.md  Dockerfile  ENTITIES.md  HOSTED.md  LICENSE  LOCAL_LLM.md  README.md  SECURITY.md  build.sh  build_on_mac.sh  config_defaults.yml  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  run_test_dev.py  run_test_package.py  run_test_wrapper.py  server.py  setup.cfg  setup.py
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
SemanticShield/: __init__.py  client.py  config_defaults.py  config_defaults.yml  dummy_data.py  errors.py  llm_result.py  moderation_exception.py  openai_funcs.py  openai_model.py  openai_settings.py  pii_analyzer.py  prompts.py  rb_generator.py  shield.py  shield_config.py  shield_result.py  supported_entities.py  yaml_parser.py
SemanticShield/fakers/: canadian_card_provider.py
SemanticShield/profanity/: profanity.py
SemanticShield/recognizers/: canadian_bank_acct_recognizer.py  canadian_passport_recognizer.py  canadian_sin_recognizer.py  luhn.py  ontario_driver_license_recognizer.py  ontario_health_card_recognizer.py
SemanticShield/sensitive/: passwords.py
promptdata/: leadgen.txt  sales.txt  sales2.txt  samplecurl.txt
shield/: __init__.py  dummy_data.py  openai_funcs.py  pii.py  shield.py  shield_config.py  useful.txt
tests/: config.json  config.yml  mock_shield.py  results.py  test_config.py  test_config_yaml.py  test_custom_pii.py  test_jailbreak.py  test_operations.py  test_password.py  test_profanity.py  test_sanitizer.py  test_shield.py
(+6 files in other folders)
