[metadata]
name = SemanticShield
version = 0.1.8
author = Semantic Brain Corp
author_email = info@semanticbrain.net
description = Semantic Shield
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://gitlab.com/SemanticBrainCorp/SemanticShield
project_urls =
    Bug Tracker = https://github.com/SemanticBrainCorp/SemanticShield/issues
    repository = https://github.com/SemanticBrainCorp/SemanticShield
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = .
packages = find:
python_requires = >=3.9

[options.packages.find]
where = SemanticShield